implement drag and drop sorting

--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JARF</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 </head>
 <body>
 
-    <div class="grid">
-    
+    <div id="panels-group" class="grid">
+    <div data-id="1">
     <iframe width=100% height=100% src="https://app.powerbi.com/view?r=eyJrIjoiOWIyZDc4NzEtNDBlZi00MGY1LWEyODItZGY4OTYwZWM1ZGEwIiwidCI6ImU3M2FmMWRlLWU5ZTYtNGM0OS1iMWUxLWZjNjg3ZjM2MjY0NyIsImMiOjR9" frameborder="1" allowfullscreen="true"></iframe>
+    </div>
+    <div data-id="2">
     <iframe width=100% height=100% src="https://app.powerbi.com/view?r=eyJrIjoiMzQ1NDFkNWUtMDg5MC00ODQwLWFlNzUtNDcxOWZmYTIzOWJmIiwidCI6ImU3M2FmMWRlLWU5ZTYtNGM0OS1iMWUxLWZjNjg3ZjM2MjY0NyIsImMiOjR9" frameborder="1" allowfullscreen="true"></iframe>
+    </div>
+    <div data-id="3">
     <iframe width=100% height=100% src="https://app.powerbi.com/view?r=eyJrIjoiNmUzMjQ4MDMtMTI5Yy00NGRlLTk5ZmQtMmQyZjg5ZWRjYmZlIiwidCI6ImU3M2FmMWRlLWU5ZTYtNGM0OS1iMWUxLWZjNjg3ZjM2MjY0NyIsImMiOjR9" frameborder="1" allowfullscreen="true"></iframe>
+    </div>
+    <div data-id="4">
     <iframe width=100% height=100% src="https://app.powerbi.com/view?r=eyJrIjoiMzc3MmYyZjktZWNlYS00ZWM5LTg2MmEtYTYyY2Y4ZTBlYTFjIiwidCI6ImU3M2FmMWRlLWU5ZTYtNGM0OS1iMWUxLWZjNjg3ZjM2MjY0NyIsImMiOjR9" frameborder="1" allowfullscreen="true"></iframe>
-    
+    </div>
      </div>
 
-
 </body>
+<script src="main.js"></script>
 </html>
